@@ -2,6 +2,8 @@
 
 	* Add PID to fuse_context.  Patch by Steven James
 
+	* Change file handle type to 'unsigned long' in kernel interface
+
 2004-09-22  Miklos Szeredi <miklos@szeredi.hu>
 
 	* A slight API change: fuse_get_context() doesn't need the "fuse"
